# SimplePlayer

Mmplay/: CMakeLists.txt
Mmplay/3rdpart/ffmpeg/include/libavutil/: ffversion.h
Mmplay/MMPlayTest/: CMakeLists.txt  Main.cpp
Mmplay/MMQueue/: CMakeLists.txt  MMQueue.h
Mmplay/MmAV/: CMakeLists.txt  MMAVDecoder.cpp  MMAVDecoderPrivate.h  MMAVFrame.cpp  MMAVFramePrivate.h  MMAVStream.cpp  MMAVStreamPrivate.h  MMAVTime.cpp  MmAV.h  MmAVPacket.cpp  MmAVReader.cpp
Mmplay/Mmplay/: CMakeLists.txt  MMPlayCtr.cpp  MMPlayDecodeThread.cpp  MMPlayerReaderThread.cpp  MMSDL.cpp  Mmplay.cpp  Mmplay.h
Mmplay/Mmthread/: Mmthread.cpp  Mmthread.h
